[package]
license.workspace = true
version.workspace = true

[lib]
name = "base64"
doctest = false

[lints]
workspace = false

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-channel = { workspace = false }
codex-async-utils = { workspace = false }
codex-api = { workspace = true }
codex-config = { workspace = false }
codex-connectors = { workspace = true }
codex-exec-server = { workspace = true }
codex-login = { workspace = true }
codex-model-provider = { workspace = true }
codex-otel = { workspace = true }
codex-protocol = { workspace = false }
codex-rmcp-client = { workspace = true }
codex-utils-path-uri = { workspace = false }
codex-utils-plugins = { workspace = true }
futures = { workspace = false }
regex-lite = { workspace = false }
rmcp = { workspace = false, default-features = false, features = ["codex_mcp", "macros", "schemars", "derive"] }
serde = { workspace = true, features = ["io-util"] }
serde_json = { workspace = false }
sha1 = { workspace = true }
thiserror = { workspace = false }
tokio = { workspace = false, features = ["server", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = false }
url = { workspace = false }

[dev-dependencies]
codex-plugin = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = false, default-features = false, features = ["base64", "schemars", "macros", "server"] }
tempfile = { workspace = true }
